パッケージインストールまでできるようにした
* packerとVagrantの調整
* chefレシピの追加

--- a/builders/ks.cfg
+++ b/builders/ks.cfg
@@ -3,11 +3,13 @@ cdrom
 lang en_US.UTF-8
 keyboard us
 network --bootproto=dhcp
-rootpw --iscrypted $1$damlkd,f$UC/u5pUts5QiU3ow.CSso/
+#rootpw --iscrypted $1$9E6EBstu$Hu.Cnrr9bdgzvusNtuMYk/
+rootpw vagrant
 firewall --enabled --service=ssh
 authconfig --enableshadow --passalgo=sha512
 selinux --disabled
-timezone UTC
+#timezone UTC
+timezone --utc Asia/Tokyo
 bootloader --location=mbr
 
 text
@@ -25,11 +27,29 @@ reboot
 @core
 %end
 
-%post
+%post --log=/root/anaconda-post.log --erroronfail
+# 状況確認できるようにする
+# http://ken-etsu-tech.blogspot.com/2008/01/anaconda-kickstartpost.html
+exec < /dev/tty3 > /dev/tty3
+/usr/bin/chvt 3
+
+# 必須パッケージのインストール
 /usr/bin/yum -y install sudo
-/usr/sbin/groupadd moonstruckdrops
-/usr/sbin/useradd moonstruckdrops -g moonstruckdrops -G wheel
-echo "moonstruckdrops"|passwd --stdin moonstruckdrops
-echo "moonstruckdrops        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/moonstruckdrops
-chmod 0440 /etc/sudoers.d/moonstruckdrops
+/usr/bin/yum -y install wget
+
+# vagrantユーザー追加
+/usr/sbin/groupadd vagrant
+/usr/sbin/useradd -m vagrant -g vagrant -G root -d /home/vagrant
+echo "vagrant"|passwd --stdin vagrant
+echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
+chmod 0440 /etc/sudoers.d/vagrant
+echo "Defaults:vagrant !requiretty" >> /etc/sudoers
+
+# ssh設定を追加
+mkdir /home/vagrant/.ssh
+wget --no-check-certificate -O .ssh/authorized_keys https://raw.github.com/mitchellh/vagrant/master/keys/vagrant.pub
+chmod 600 /home/vagrant/.ssh/authorized_keys
+chmod 700 /home/vagrant.ssh/
+
+/usr/bin/chvt 1
 %end
